k8s/apps/media/arr/sonarr/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: arr
spec:
  parentRefs:
    - name: stonegarden
      namespace: gateway
  hostnames:
    - "sonarr.vanillax.xyz"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sonarr-web
          port: 80
